load("//cyclone:build_defs.bzl", "cyc_binary")

genrule(
    name = "cycbison_simple_cyc",
    srcs = ["cycbison_simple"],
    outs = ["cycbison_simple.string.cyc"],
    cmd = "$(location //cyclone/tools/stringify) $< > $@",
    tools = ["//cyclone/tools/stringify"],
)

cyc_binary(
    name = "bison",
    srcs = ["cycbison_simple.string.cyc"] + glob([
        "*.cyc",
        "*.h",
    ]),
    visibility = ["//visibility:public"],
    deps = ["//cyclone/library/std"],
)
