load("//cyclone:build_defs.bzl", "cyc_binary", "cyclex", "cycyacc")

exports_files(
    srcs = [
        "lexer.cyl",
        "parser.cyy",
    ],
    visibility = ["//cyclone/stage1:__subpackages__"],
)

filegroup(
    name = "sources",
    srcs = [
        "compact.cyc",
        "compact.h",
        "lexer.h",
        "lexgen.cyc",
        "lexgen.h",
        "main.cyc",
        "output.cyc",
        "output.h",
        "parser.h",
        "syntax.cyc",
        "syntax.h",
    ],
    visibility = ["//cyclone/stage1:__subpackages__"],
)

cyclex(
    name = "lexer",
    stage = 2,
)

cycyacc(
    name = "parser_tab",
    src = "parser.cyy",
)

cyc_binary(
    name = "cyclex",
    srcs = [
        ":lexer",
        ":parser_tab",
        ":sources",
    ],
    visibility = ["//visibility:public"],
    deps = ["//cyclone/library/std"],
)
