load("//cyclone:build_defs.bzl", "cyc_binary")

filegroup(
    name = "srcs",
    srcs = [
        "cyclone.cyc",
        "cyclone.h",
    ],
    visibility = ["//cyclone/stage1/tools/cyclone:__pkg__"],
)

cyc_binary(
    name = "cyclone",
    srcs = [":srcs"],
    stage = 2,
    visibility = ["//visibility:public"],
    deps = [
        "//cyclone/library/compiler",
        "//cyclone/library/std",
    ],
)
