load("//cyclone:build_defs.bzl", "cyc_binary")

filegroup(
    name = "sources",
    srcs = ["stringify.cyc"],
    visibility = ["//cyclone/stage1:__subpackages__"],
)

cyc_binary(
    name = "stringify",
    srcs = ["stringify.cyc"],
    visibility = ["//visibility:public"],
    deps = ["//cyclone/library/std"],
)
