load("//cyclone:build_defs.bzl", "cyc_binary")

cyc_binary(
    name = "buildlib",
    boot_srcs = ["buildlib.c"],
    data = ["//cyclone/library/std/cyc-lib:cycspecs"],
    visibility = ["//visibility:public"],
    deps = [
        "//cyclone/boot/library/compiler",
        "//cyclone/boot/library/std",
    ],
)
