load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//cyclone:build_defs.bzl", "MACHINE")

cc_binary(
    name = "buildlib",
    srcs = ["buildlib.c"],
    copts = [MACHINE],
    linkopts = [MACHINE],
    visibility = ["//visibility:public"],
    deps = [
        "//cyclone/boot/library/compiler",
        "//cyclone/boot/library/std",
        "//cyclone/library/runtime",
    ],
)
