load("//cyclone:build_defs.bzl", "cyc_binary")

cyc_binary(
    name = "cyclone",
    boot_srcs = ["cyclone.c"],
    data = [
        "//cyclone/library/std/cyc-lib:cycspecs",
        "//cyclone/library/std/cyc-lib:gc.a",
        "//cyclone/library/std/cyc-lib:runtime_cyc.a",
    ],
    visibility = ["//visibility:public"],
    deps = ["//cyclone/boot/library/compiler"],
)
