load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//cyclone:build_defs.bzl", "MACHINE")

cc_binary(
    name = "cyclone",
    srcs = ["cyclone.c"],
    copts = [MACHINE],
    linkopts = [MACHINE],
    visibility = ["//visibility:public"],
    deps = [
        "//cyclone/boot/library/compiler",
        "//cyclone/library/runtime",
    ],
)
