load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//cyclone:build_defs.bzl", "MACHINE")

cc_binary(
    name = "bison",
    srcs = glob(["*.c"]),
    copts = [MACHINE],
    linkopts = [MACHINE],
    tags = ["no-cross"],
    visibility = ["//cyclone/stage1:__subpackages__"],
    deps = [
        "//cyclone/library/runtime",
        "//cyclone/library/std/cyc-lib",
        "//cyclone/stage0/library/std",
    ],
)
