load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//cyclone:build_defs.bzl", "MACHINE")

cc_binary(
    name = "buildlib",
    srcs = ["buildlib.c"],
    copts = [MACHINE],
    linkopts = [MACHINE],
    visibility = ["//cyclone/stage1:__subpackages__"],
    deps = [
        "//cyclone/library/runtime",
        "//cyclone/library/std/cyc-lib",
        "//cyclone/stage0/library/compiler",
        "//cyclone/stage0/library/std",
    ],
)
