load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//cyclone:build_defs.bzl", "MACHINE")

cc_binary(
    name = "cyclone",
    srcs = ["cyclone.c"],
    copts = [MACHINE],
    linkopts = [MACHINE],
    visibility = ["//cyclone/stage1:__subpackages__"],
    deps = [
        "//cyclone/library/runtime",
        "//cyclone/stage0/library/compiler",
    ],
)
